feat: add reset bookings endpoint
